Migrate to jsdelivr

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/alsacreations/KNACSS/6.1.2/css/knacss.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/alsacreations/KNACSS@6.1.2/css/knacss.css">
     {% block cssfiles %} {% endblock %}
     {% assets 'css_app' %}<link rel="stylesheet" href="{{ ASSET_URL }}">{% endassets %}
 
